# pvCNN

./: .gitignore  CMakeLists.txt  README  README.md  cipher.txt  hash_verify.txt
FHE-LeNet/: Makefile
FHE-LeNet/include/seal/util/: locks.h
FHE-LeNet/src/: avgPoolingLayer.cpp  cnnBuilder.cpp  cnnBuilder.h  convolutionalLayer.cpp  convolutionalLayer.h  fullyConnectedLayer.cpp  fullyConnectedLayer.h  layer.h  mainparams.cpp  network.cpp  network.h  poolingLayer.cpp  poolingLayer.h  sealencryptor.cpp  squareLayer.cpp  squareLayer.h  utils.cpp
depends/libsnark/depends/libff/libff/algebra/curves/alt_bn128/: alt_bn128_pairing.cpp
src/: CMakeLists.txt  main.cpp
src/commitment/: CMakeLists.txt  commitment.hpp  he-main.cpp
src/data/: M-filter_3000.txt  lenet-input-scale-10.csv  lenet-weight-scale-10.csv
src/qmp/: CMakeLists.txt  commitment.cpp  commitment.hpp  matrix_gadget.cpp  matrix_gadget.hpp  model.cpp  model.hpp  qmp.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp  writer.cpp  writer.hpp
src/test/: CMakeLists.txt  matrix.cpp  matrix_only_QAP.cpp  matrix_only_QMP.cpp  model_lenet.cpp  test_non_linear_operation.cpp
